# isaac-sim-synthdata

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: aws.example.yaml  dataset.yaml  training.yaml
docs/: architecture.md  github_readiness.md  technical_overview.md
scripts/: compare_sim_to_real.py  evaluate_model.py  generate_dataset.py  launch_sagemaker_training.py  train_model.py  upload_to_s3.py
src/synthetic_inspection/: __init__.py  cloud.py  cloud_training.py  config.py  exporter.py  isaac_scene.py  metrics.py  pipeline.py  randomization.py  training.py
tests/: test_config.py  test_pipeline.py  test_randomization.py
