[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-inspection"
version = "0.1.0"
description = "Synthetic data generation and domain randomization pipeline for robotic defect inspection with NVIDIA Isaac Sim."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
cloud = ["boto3>=1.34", "sagemaker>=2.220"]
train = ["torch>=2.1", "torchvision>=0.16"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py310"
